scripts/nullness/wpi/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:43: error: (dereference.of.nullable) $$ 1 $$ form $$ ( 1218, 1222 ) $$ dereference of possibly-null reference form
				Color c = form.getColor();
				          ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:74: error: (dereference.of.nullable) $$ 1 $$ rangeMap $$ ( 2163, 2171 ) $$ dereference of possibly-null reference rangeMap
		Form chosenOne = rangeMap.get(target);
		                 ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:29: error: (method.invocation) $$ 3 $$ setByTriangle(fr.noxx90.jflam.model.Triangle) $$ @UnderInitialization @NonNull Form $$ @Initialized @NonNull Form $$ ( 647, 670 ) $$ call to setByTriangle(fr.noxx90.jflam.model.Triangle) not allowed on the given receiver.
		setByTriangle(triangle);
		             ^
  found   : @UnderInitialization @NonNull Form
  required: @Initialized @NonNull Form
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:44: error: (dereference.of.nullable) $$ 1 $$ form $$ ( 1506, 1510 ) $$ dereference of possibly-null reference form
				Color c = form.getColor();
				          ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:130: error: (dereference.of.nullable) $$ 1 $$ rangeMap $$ ( 4173, 4181 ) $$ dereference of possibly-null reference rangeMap
		Form chosenOne = rangeMap.get(target);
		                 ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:58: error: (dereference.of.nullable) $$ 1 $$ writer $$ ( 1429, 1435 ) $$ dereference of possibly-null reference writer
        	writer.println(builder);        	
        	^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/JFlamMain.java:67: error: (argument) $$ 4 $$ arg3 $$ Graphics.drawImage $$ null (NullType) $$ @Initialized @NonNull ImageObserver $$ ( 2178, 2182 ) $$ incompatible argument for parameter arg3 of Graphics.drawImage.
				g.drawImage(image, 0, 0, null);
				                         ^
  found   : null (NullType)
  required: @Initialized @NonNull ImageObserver
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
